# nova-voice

./: .env.example  .gitignore  README.md  SPEC.md  bash.exe.stackdump  pyproject.toml
config/: llm-benchmark-models.yml  nightly-regression.json  persona.example.yaml  satellite.env.example  tier0-acceptance.json
deploy/patches/: vllm-omni-turing-dtype.patch
deploy/pipewire/: 60-nova-voice-aec.conf
deploy/systemd/: llm-benchmark-ollama.service  nova-voice-dfn.service  nova-voice-dots-tts.service  nova-voice-llm.service  nova-voice-mempalace.service  nova-voice-nightly.service  nova-voice-nightly.timer  nova-voice-satellite.service  nova-voice-tier0-endurance.service  nova-voice-tts-stream.conf  nova-voice-tts.service  nova-voice-websearch.service  nova-voice.service
deploy/vllm/: qwen3_tts_turing.yaml
docs/: ARCHITECTURE.md  CONTRACTS.md  CUSTOM-WAKE-WORDS.md  DIAGNOSTICS.md  DURABLE-AGENT.md  HOUSEHOLD-AUTHORITY.md  HOUSEHOLD-EVENTS.md  IMPLEMENTATION-STATUS.md  IRIDIUM-INVENTORY.md  LLM-BENCHMARK.md  MEMPALACE-MEMORY.md  MODELS.md  OWNER-ACCEPTANCE-TESTS.md  PERSONAL-PROVIDERS.md  PLAN.md  ROLLBACK.md  SATELLITE-ROLLOUT.md  SMART-HOME-SYSTEM-PROMPT.md  TESTING.md  VOICE-AGENT-ROADMAP.md
docs/evidence/: TIER0-2026-07-22.md
ops/: benchmark_nova_transports.py  build-llama-cpp.sh  configure-pipewire-aec.sh  create-household-ca.sh  dfn_server.py  download_openwakeword_features.py  install-dots-tts.sh  install-iridium.sh  install-linux-satellite.sh  install-llm-benchmark-iridium.sh  install-macos-satellite-watchdog.sh  install-macos-satellite.sh  inventory-iridium.sh  issue-satellite-identity.sh  issue-server-cert.sh  llm-benchmark-iridium  prepare-llm-model.sh  prepare-voice-models.sh  provision-macos-keychains.sh  requirements-inference.txt  smoke_audio_frontend.py  smoke_voice_models.py  stutter_metric.py  tier0_endurance_monitor.py  tier0_live_probe.py  versions.env  warm-streaming-tts.sh  websearch_server.py
ops/e2e/: voice_e2e.py
satellites/macos/: Package.swift
services/dots_tts/: build.py  server.py  voices.py
skills/nova-home-control/: SKILL.md
skills/nova-session/: SKILL.md
skills/nova-tasks/: SKILL.md
src/nova_voice/: __init__.py  affectations.py  agent_settings.py  api.py  authority.py  automation.py  bootstrap.py  briefings.py  cli.py  commitments.py  communications.py  config.py  continuity.py  dialogue.py  digital_twin.py  domain.py  events.py  logging.py  memory.py  memory_server.py  multimodal.py  multimodal_inputs.py  nightly_maintenance.py  offline_optimizers.py  persistence.py  persona.py  policy.py  (+12 more)
tests/: conftest.py  test_affectations.py  test_agent_administration.py  test_audio_election.py  test_audio_replay.py  test_authority.py  test_automation.py  test_briefings.py  test_capability_registry.py  test_commitments.py  test_communications.py  test_context_relevance.py  test_continuity.py  test_conversations.py  test_diagnostics.py  test_dialogue.py  test_digital_twin.py  test_domain_policy.py  test_durable_plan_runner.py  test_durable_records.py  test_durable_store.py  test_echo_guard.py  test_evaluation_registry.py  test_failure_replay.py  test_household_events.py  test_household_simulator.py  test_icloud_provider.py  test_knowledge_fallback.py  test_library_provider.py  test_llama_conversation.py  test_logging.py  test_macos_satellite_packaging.py  test_memory.py  test_multimodal_contract.py  test_multimodal_inputs.py  test_nightly_maintenance.py  test_nova_provider.py  test_offline_optimizers.py  test_persistence.py  test_personal_provider.py  (+43 more)
(+94 files in other folders)
