[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nova-voice"
version = "0.1.0"
description = "Completely local, room-aware voice control for Nova"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Private" }
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  # NeMo's current Numba dependency rejects NumPy 2.5+.
  "numpy>=2.1,<2.5",
  "orjson>=3.10,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6,<7",
  "tzdata>=2026.3",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=15,<17",
  "wsproto>=1.2,<2",
]

[project.optional-dependencies]
audio = [
  "ai-edge-litert>=2.1,<3",
  "onnxruntime>=1.20,<2",
  "silero-vad>=6.2,<7",
  "sounddevice>=0.5,<1",
]
# openWakeWord is installed separately by ops/prepare-voice-models.sh with
# --no-deps: its 0.6.0 metadata requires tflite-runtime, which has no Linux
# CPython 3.12 wheel. The runtime maps that import to ai-edge-litert.
satellite = [
  "sounddevice>=0.5,<1",
]
inference = [
  "qwen-tts>=0.1,<1",
]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
nova-voice = "nova_voice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nova_voice"]

[tool.hatch.build.targets.wheel.force-include]
"src/nova_voice/diagnostics/index.html" = "nova_voice/diagnostics/index.html"
"src/nova_voice/monitor/index.html" = "nova_voice/monitor/index.html"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
