[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "nova-voice"
version = "0.1.0"
description = "Completely local, room-aware voice control for Nova"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Private" }
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "ddgs>=9,<10",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  # NeMo's current Numba dependency rejects NumPy 2.5+.
  "mempalace>=3.3.2,<4",
  "numpy>=2.1,<2.5",
  "orjson>=3.10,<4",
  # Drives the Brave Search browser-scrape sidecar (ops/websearch_server.py).
  # The chromium binary is a one-time host artifact under PLAYWRIGHT_BROWSERS_PATH.
  "playwright>=1.48,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "PyYAML>=6,<7",
  "tzdata>=2026.3",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=15,<17",
  "wsproto>=1.2,<2",
]

[project.optional-dependencies]
audio = [
  "onnxruntime>=1.20,<2",
  "silero-vad>=6.2,<7",
  "sounddevice>=0.5,<1",
]
satellite = [
  "sounddevice>=0.5,<1",
]
inference = [
  "qwen-tts>=0.1,<1",
]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
nova-voice = "nova_voice.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nova_voice"]

[tool.hatch.build.targets.wheel.force-include]
"src/nova_voice/diagnostics/index.html" = "nova_voice/diagnostics/index.html"
"src/nova_voice/monitor/index.html" = "nova_voice/monitor/index.html"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
